feat(auth): implement frontend sign-up, login, and logout flow
Implements the core authentication user interface and logic for the frontend application.

- Adds a new `SignUpPage.tsx` to allow users to register with an email and password.
- Creates a `useLogout` hook that signs the user out, clears the Redux auth state, and resets the RTK Query API cache to prevent data leakage between sessions.
- Adds a 'Logout' button to the main `Header` component.
- Establishes a symlink from the root `.env` file to `src/frontend/.env` to ensure Vite correctly loads environment variables without duplicating configuration.
- Updates `App.tsx` to include the /signup route and adds a navigation link from the `LoginPage`.

--- a/docs/plans/09.phase-2-enhancement-plan.md
+++ b/docs/plans/09.phase-2-enhancement-plan.md
@@ -63,11 +63,51 @@ Phase 2 is divided into four main sub-phases, each with a clear focus:
     - Create backend middleware to validate Firebase JWTs and attach the user to the request object.
     - Refactor all API service logic to be user-aware, ensuring users can only access their own data.
 - **Implementation Steps**:
-    1. 🔘 Set up a new Firebase project and configure Auth.
-    2. 🔘 Add `User` model to `schema.prisma` and link it to the `Board` model.
-    3. 🔘 Create `authMiddleware` in the backend to protect all routes.
-    4. 🔘 Update all database queries to include a `where: { userId: ... }` clause.
-    5. 🔘 Implement frontend login page, auth state management (in a Redux slice), and routing guards.
+    1. ✅ Set up a new Firebase project and configure Auth.
+    2. ✅ Add `User` model to `schema.prisma` and link it to the `Board` model.
+    3. ✅ Create `authMiddleware` in the backend to protect all routes.
+    4. ✅ Update all database queries to include a `where: { userId: ... }` clause.
+    5. 🔘 **Implement Frontend Authentication Flow:**
+        - **Sign-Up Page**: Create a new `SignUpPage.tsx` with a form to register users via Firebase's `createUserWithEmailAndPassword` function. Link to this page from the `LoginPage`.
+          - **Problem Statement**: Users need a way to register for an account using email and password.
+          - **Requirements**:
+            - Form fields for email, password, and a "confirm password" field.
+            - Optional field for display name.
+            - Validation for email format, password strength, and ensuring passwords match.
+            - Error handling for duplicate email, weak password, and network issues.
+            - Link to the login page for existing users.
+          - **Technical Approach**:
+            - Use Firebase’s `createUserWithEmailAndPassword` for registration.
+            - On success, update Redux `authSlice` with user info and JWT.
+            - Redirect to the main app (e.g., `/boards`) after successful sign-up.
+            - Display error messages for failed registration attempts.
+          - **Implementation Steps**:
+            1. Create `SignUpPage.tsx` in `src/frontend/src/pages/`.
+            2. Implement the form with Tailwind CSS and ShadCN/UI components, including a "confirm password" field.
+            3. Add form validation, including a check that passwords match, and error display.
+            4. Integrate Firebase registration logic.
+            5. Update Redux store on success.
+            6. Add navigation link to login page.
+            7. Add navigation link from login page to sign-up page.
+          - **Testing Strategy**:
+            - Unit test form validation logic with Vitest.
+            - Component test registration flow with React Testing Library.
+            - E2E test: Register a new user and verify login and redirect.
+          - **Risks & Mitigation**:
+            - Duplicate email: Show clear error message.
+            - Network errors: Display retry option.
+          - **Dependencies**:
+            - Firebase Auth SDK
+            - Redux Toolkit `authSlice`
+            - React Router
+        - **Google Sign-In**: Add a "Sign in with Google" button to `LoginPage.tsx` that uses Firebase's `signInWithPopup` and the `GoogleAuthProvider`.
+        - **State Management**: Ensure the Redux `authSlice` correctly handles user state for sign-up, email login, and Google Sign-in, storing the JWT and user info.
+        - **Protected Routes**: Implement a `<ProtectedRoute />` component that wraps authenticated routes and redirects unauthenticated users to the login page.
+    6. 🔘 **Implement Logout & Profile Page:**
+        - **Logout**: Create a `useLogout` hook that calls Firebase's `signOut()`, clears the Redux auth state, and redirects to the login page. Add a logout button to the main application header.
+        - **Profile Page**: Create a basic, view-only `ProfilePage.tsx` that displays the user's email and display name from the Redux store.
+    
+- **Note on Session Duration**: Revisit the indefinite session length. While Firebase handles automatic token refreshes for a persistent user session, we should evaluate implementing a session timeout or a "remember me" option for enhanced security in a future phase.
 
 ---
 
