docs(plans): update status of data versioning plans
Updated the three most recent plan files (`13`, `14`, `15`) to reflect their final status.

- Marked plans 13 and 14 as "obsolete" to preserve the debugging history.
- Marked plan 15 as "completed" as it represents the final, successful strategy.

--- a/docs/plans/13.final-bug-fix-and-test-realignment.md
+++ b/docs/plans/13.final-bug-fix-and-test-realignment.md
@@ -1,24 +1,26 @@
 # Plan: Final Bug Fix & Test Realignment
 
+> **Note: This plan is obsolete.** Its analysis was a step in the debugging process, but the root cause and solution were ultimately refined in **Plan 15**.
+
 **Date:** July 14, 2025
 
-## 1. Problem Statement
+## ~~1. Problem Statement~~
 
 Despite multiple fixes to the database schema and frontend logic, core functionalities like board creation are still failing with a `Foreign key constraint violated` error. This indicates a fundamental bug in the backend's data creation logic.
 
 Furthermore, the project's integration tests have not been updated to reflect the significant schema changes related to data versioning. This has allowed the backend bug to persist through multiple debugging cycles and prevents us from having a reliable measure of the application's stability.
 
-## 2. Root Cause Analysis
+## ~~2. Root Cause Analysis~~
 
 1.  **Incorrect Prisma Create Logic:** The primary bug is in how new records are created and linked. The code in `boards.ts`, `lists.ts`, and `cards.ts` uses the `relation: { connect: { ... } }` syntax. This is the incorrect pattern for assigning a foreign key to an existing record. The correct and simpler method is to directly assign the value to the foreign key field (e.g., `userId: 'some-user-id'`). This single mistake is the cause of the persistent "Foreign key constraint violated" errors.
 
 2.  **Stale and Broken Tests:** The integration test suite is out of sync with the current database schema. The tests are likely still trying to create data using the old, non-versioned model and are not validating the new, correct relationships. Running these broken tests is impossible, which has deprived us of a critical tool for catching these backend bugs early.
 
-## 3. Proposed Solution: Test-Driven Correction
+## ~~3. Proposed Solution: Test-Driven Correction~~
 
 We will adopt a test-driven approach to fix this. We will first fix the tests so they align with the schema, and then use those tests to validate our fix of the backend logic.
 
-### **Solution A: Fix Tests First, Then Fix Code (Recommended)**
+### ~~**Solution A: Fix Tests First, Then Fix Code (Recommended)**~~
 
 This is the most robust approach to ensure a stable, long-term fix.
 
@@ -30,7 +32,7 @@ This is the most robust approach to ensure a stable, long-term fix.
 -   **Cons**:
     -   Requires more upfront work on the test suite before fixing the visible application bug.
 
-### **Solution B: Fix Code, Then Fix Tests**
+### ~~**Solution B: Fix Code, Then Fix Tests**~~
 
 This approach would fix the application bug first and then update the tests to match.
 
@@ -43,9 +45,9 @@ This approach would fix the application bug first and then update the tests to m
 
 **Decision:** We will proceed with **Solution A**. The immediate priority is to make our test suite functional again.
 
-## 4. Implementation Steps
+## ~~4. Implementation Steps~~
 
-### Phase 1: Repair the Integration Test Suite
+### ~~Phase 1: Repair the Integration Test Suite~~
 
 1.  **Analyze `tests/helpers.ts` and `tests/integration/setup.ts`**:
     -   **Likely Trouble Spot**: The `setup` and `getAuthHeaders` functions likely create test users and JWTs based on the old schema.
@@ -64,7 +66,7 @@ This approach would fix the application bug first and then update the tests to m
         -   Update the tests for the `move` endpoints. The assertions should be updated to verify that a *new version* of the item is created with the correct position and that the old version is marked `INACTIVE`.
         -   Run the tests repeatedly and fix all failures.
 
-### Phase 2: Fix the Backend Logic
+### ~~Phase 2: Fix the Backend Logic~~
 
 Once the entire integration test suite is running and **failing predictably** on the known bugs (i.e., the tests for creating and moving items fail because the backend logic is wrong), we can proceed.
 
