--- a/docs/plans/14.test-driven-data-model-correction.md
+++ b/docs/plans/14.test-driven-data-model-correction.md
@@ -1,22 +1,24 @@
 # Plan: Test-Driven Data Model Correction
 
+> **Note: This plan is obsolete.** Its analysis was a step in the debugging process, but the root cause and solution were ultimately refined in **Plan 15**.
+
 **Date:** July 14, 2025
 
-## 1. Problem Statement
+## ~~1. Problem Statement~~
 
 Core API endpoints for creating and updating data are failing with `Foreign key constraint violated` and `Unique constraint failed` errors. This is due to a fundamental mismatch between the application's versioning logic and the database schema's constraints. The integration test suite is also broken, preventing reliable verification of backend logic.
 
-## 2. Root Cause Analysis
+## ~~2. Root Cause Analysis~~
 
 1.  **Incorrect Foreign Key Usage in Creation:** The `POST /api/boards` endpoint fails because the `userId` used to create a board does not correctly reference an existing user in the database during the test run. The `connect` logic was a red herring; the real issue is how the test user's identity is being passed and used.
 
 2.  **Flawed Versioning Logic in Updates:** The `PUT /api/boards/:id` endpoint (and by extension, all update endpoints) fails because the logic attempts to create a new version of an entity with the same persistent `boardId`, which now violates the `@unique` constraint we added. The versioning logic must be updated to handle this correctly.
 
-## 3. Proposed Solution: A Test-First, Schema-Aligned Approach
+## ~~3. Proposed Solution: A Test-First, Schema-Aligned Approach~~
 
 We will systematically repair the test suite and then use it to validate the corrected backend logic. There is only one viable solution.
 
-### **The Plan: Fix Tests, Then Fix Code**
+### ~~**The Plan: Fix Tests, Then Fix Code**~~
 
 1.  **Repair Test Helpers (`tests/helpers.ts`):**
     -   **Action:** The `getAuthHeaders` function is the source of our user identity problem. It creates a JWT for a user that may not exist in the test database. We will modify it to first ensure a corresponding user exists via `prisma.user.upsert`. This guarantees that any token generated for a test represents a real user in the database, fixing the foreign key problem at its source.
@@ -39,22 +41,22 @@ We will systematically repair the test suite and then use it to validate the cor
             -   **Update the existing `ACTIVE` record:** Set its `status` to `INACTIVE`.
             -   **Create a new record:** This new record will have an incremented `version`, `status: 'ACTIVE'`, the updated data, and crucially, it will **copy the `boardId`, `listId`, etc., from the record it is replacing**. The `id` field (the primary key) will be new and unique, but the persistent entity ID will be maintained.
 
-## 4. Implementation Steps
+## ~~4. Implementation Steps~~
 
-### Phase 1: Repair the Test Suite
+### ~~Phase 1: Repair the Test Suite~~
 
 1.  **Fix `tests/helpers.ts`**: Modify `getAuthHeaders` to ensure the user exists in the DB before generating a token.
 2.  **Fix `tests/integration/api.test.ts`**: Update the `beforeAll` block and all tests to use the new helpers and correct data creation logic. Run the test file until it passes or fails predictably on the known backend bugs.
 3.  **Fix `tests/integration/auth.test.ts`**: This file heavily tests creation and updates. It will need a thorough review to align with the new data creation patterns and versioning assertions.
 4.  **Fix `tests/integration/cards.test.ts` & `lists.test.ts`**: Apply the same fixes, focusing on rewriting the `PUT` tests to validate the versioning logic correctly.
 
-### Phase 2: Fix the Backend Code
+### ~~Phase 2: Fix the Backend Code~~
 
 1.  **Fix `boards.ts` `POST /api/boards`**: Correct the `prisma.board.create` call. Run tests to verify.
 2.  **Fix `boards.ts` `PUT /api/boards/:boardId`**: Implement the correct update/versioning logic. Run tests to verify.
 3.  **Apply Fixes to all other `create` and `update/move` endpoints** across `lists.ts` and `cards.ts`, running the relevant tests after each fix to ensure correctness.
 
-## 5. Final Verification
+## ~~5. Final Verification~~
 
 1.  Run the entire integration test suite (`npm run test:integration`). All tests must pass.
 2.  Run the E2E test suite (`npm run test:e2e`). All tests must pass.
