--- a/docs/plans/12.fix-dnd-after-versioning.md
+++ b/docs/plans/12.fix-dnd-after-versioning.md
@@ -11,14 +11,14 @@ Optimistic UI updates are likely failing, and the backend is not persisting move
 ## 2. Requirements
 
 ### Functional Requirements
-- **Restore Card DND**: Users must be able to reorder cards within a list and move them between lists.
-- **Restore List DND**: Users must be able to reorder lists on a board.
-- **Data Persistence**: All moves must be correctly persisted to the database according to the new versioning logic (i.e., marking the old version `INACTIVE` and creating a new `ACTIVE` version).
-- **Optimistic UI**: The UI must provide immediate visual feedback during DND operations, correctly handling the new data structures returned by the API.
+- **[ ] Restore Card DND**: Users must be able to reorder cards within a list and move them between lists.
+- **[ ] Restore List DND**: Users must be able to reorder lists on a board.
+- **[✅] Data Persistence**: All moves must be correctly persisted to the database according to the new versioning logic (i.e., marking the old version `INACTIVE` and creating a new `ACTIVE` version). *(Backend logic is mostly in place, but buggy for lists).*
+- **[ ] Optimistic UI**: The UI must provide immediate visual feedback during DND operations, correctly handling the new data structures returned by the API.
 
 ### Non-Functional Requirements
-- **Code Clarity**: The updated code should clearly distinguish between a version's unique `id` and the persistent `entityId` (e.g., `cardId`).
-- **Test Coverage**: The fix must be validated by both manual and automated tests.
+- **[ ] Code Clarity**: The updated code should clearly distinguish between a version's unique `id` and the persistent `entityId` (e.g., `cardId`).
+- **[ ] Test Coverage**: The fix must be validated by both manual and automated tests.
 
 ## 3. Investigation & Proposed Fixes
 
@@ -65,31 +65,32 @@ If optimistic updates prove too difficult to implement correctly under the new m
 
 ## 4. Implementation Steps
 
-1.  **Update Backend API & Services (Highest Priority)**
-    -   **File(s)**: `src/backend/routes/cards.ts`, `src/backend/services/cardService.ts` (and equivalents for lists).
+1.  **[ ] Update Backend API & Services (Highest Priority)**
+    -   **File(s)**: `src/backend/routes/cards.ts`, `src/backend/routes/lists.ts`.
     -   **Action**:
-        -   Modify the routes to use the entity identifier in the URL, e.g., `PUT /api/cards/:cardId/move`.
-        -   In the service, update the `move` logic. It should:
-            1.  Find the current `ACTIVE` record using the provided `cardId`.
-            2.  In a transaction, set its `status` to `INACTIVE`.
-            3.  Create a new record with the same `cardId`, an incremented `version`, `status: ACTIVE`, and the new `position` and/or `listId`.
-            4.  Return the newly created record.
+        -   **[✅]** Modify the routes to use the entity identifier in the URL, e.g., `PUT /api/cards/:cardId/move`.
+        -   **[ ]** In the service, update the `move` logic. It should:
+            1.  **[✅]** Find the current `ACTIVE` record using the provided `cardId`.
+            2.  **[✅]** In a transaction, set its `status` to `INACTIVE`.
+            3.  **[✅]** Create a new record with the same `cardId`, an incremented `version`, `status: ACTIVE`, and the new `position` and/or `listId`.
+            4.  **[ ] (For Lists)** Ensure all `ACTIVE` cards from the old list version are re-associated with the new list version.
+            5.  **[✅]** Return the newly created record.
 
-2.  **Update Frontend RTK Query Mutations**
-    -   **File(s)**: `src/frontend/src/api/dndApi.ts` (or equivalent).
+2.  **[✅] Update Frontend RTK Query Mutations**
+    -   **File(s)**: `src/frontend/src/api/api.ts`.
     -   **Action**:
-        -   Update the `moveCard` and `moveList` mutations to call the new backend endpoints (e.g., `/api/cards/${cardId}/move`).
-        -   Ensure the body of the request contains the necessary data (new `listId`, `position`).
+        -   **[✅]** Update the `moveCard` and `moveList` mutations to call the new backend endpoints (e.g., `/api/cards/${cardId}/move`).
+        -   **[✅]** Ensure the body of the request contains the necessary data (new `listId`, `position`).
 
-3.  **Fix Optimistic Update Logic**
-    -   **File(s)**: `src/frontend/src/api/dndApi.ts`, `src/frontend/src/store/boardsSlice.ts`.
+3.  **[ ] Fix Optimistic Update Logic**
+    -   **File(s)**: `src/frontend/src/api/api.ts`, `src/frontend/src/store/boardsSlice.ts`.
     -   **Action**:
-        -   Revise the `onQueryStarted` logic for the move mutations.
-        -   The optimistic update patch must now *replace* the old card object in the Redux store with the new card object returned from the successful mutation. The key is that the `id` will change, but the `cardId` will remain the same. The logic needs to find the item to replace based on `cardId`.
+        -   **[ ]** Revise the `onQueryStarted` logic for the move mutations.
+        -   **[ ]** The optimistic update patch must now *replace* the old card/list object in the Redux store with the new object returned from the successful mutation. The logic needs to find the item to replace based on `cardId` or `listId`.
 
-4.  **Update Frontend Component Logic**
+4.  **[ ] Update Frontend Component Logic**
     -   **File(s)**: `src/frontend/src/pages/BoardDetailPage.tsx`.
-    -   **Action**: Ensure that the `id` passed to the `@dnd-kit` components is the version-specific `id`, but the `id` used in the `handleDragEnd` logic for API calls is the persistent `entityId` (`cardId` or `listId`).
+    -   **Action**: **[ ]** Ensure that the `id` passed to the `@dnd-kit` components is the version-specific `id`, but the `id` used in the `handleDragEnd` logic for API calls is the persistent `entityId` (`cardId` or `listId`). **This is the primary frontend bug.**
 
 ## 5. Testing Strategy
 
@@ -113,14 +114,15 @@ A multi-layered testing approach is critical to validate the fix.
 
 ### 5.2. Automated Testing (To be implemented after manual confirmation)
 
-1.  **Integration Tests (`tests/integration/`)**:
+1.  **[ ] Integration Tests (`tests/integration/`)**:
     -   **File(s)**: `cards.test.ts`, `lists.test.ts`.
-    -   **Action**: Update the tests for the `move` endpoints.
+    -   **Action**: **[ ]** Update the tests for the `move` endpoints.
     -   **Assertions**:
-        -   Verify the endpoint returns a `200 OK` with the new version of the object.
-        -   Add an assertion to fetch the entity by its `entityId` and confirm that the old version is now `INACTIVE` and the new version is `ACTIVE` with the updated properties.
+        -   **[ ]** Verify the endpoint returns a `200 OK` with the new version of the object.
+        -   **[ ]** Add an assertion to fetch the entity by its `entityId` and confirm that the old version is now `INACTIVE` and the new version is `ACTIVE` with the updated properties.
+        -   **[ ] (For Lists)** Add an assertion to confirm that cards were correctly moved to the new list version.
 
-2.  **End-to-End Tests (`tests/e2e/`)**:
+2.  **[ ] End-to-End Tests (`tests/e2e/`)**:
     -   **File(s)**: `dnd.spec.ts`.
     -   **Action**: Review and update the existing DND tests. They may not need significant changes if the UI behavior is restored, but they must be run to confirm they pass.
     -   **Assertions**: The existing assertions (checking the final visual state of the board) should still be valid.
@@ -134,5 +136,5 @@ A multi-layered testing approach is critical to validate the fix.
 
 ## 7. Dependencies
 
--   A stable and passing integration test suite (completed in `11.fix-integration-tests.md`).
--   A clear understanding of the current RTK Query and `@dnd-kit` implementation.
+-   **[✅]** A stable and passing integration test suite (completed in `11.fix-integration-tests.md`).
+-   **[✅]** A clear understanding of the current RTK Query and `@dnd-kit` implementation.
