--- a/docs/plans/11.fix-integration-tests.md
+++ b/docs/plans/11.fix-integration-tests.md
@@ -1,29 +1,31 @@
 # Plan to Resolve Failing Integration Tests
 
+**[✅] Status: Complete. All tests listed in this plan have been successfully resolved.**
+
 Here is a breakdown of the remaining failing tests, the likely causes of failure, and the proposed fixes.
 
-#### 1. Failing Test: `cards.test.ts > GET /api/cards/:id > should get a card by its ID`
+#### 1. [✅] Failing Test: `cards.test.ts > GET /api/cards/:id > should get a card by its ID`
 
 *   **Symptom**: The test receives a `404 Not Found` error instead of the expected `200 OK`.
 *   **Likely Cause**: The `cardId` being used in the test is incorrect. The `cardId` is created in the `beforeAll` block, but it seems that the `GET` request is not using the correct ID.
 *   **Proposed Fix**: I will update the test to correctly use the `cardId` from the `beforeAll` block. This will ensure that the test is fetching a valid card.
 *   **Impact on Other Tests**: This change will only affect this specific test and will not have any impact on other tests.
 
-#### 2. Failing Test: `cards.test.ts > PUT /api/cards/:id > should update a card title and description`
+#### 2. [✅] Failing Test: `cards.test.ts > PUT /api/cards/:id > should update a card title and description`
 
 *   **Symptom**: The test receives a `404 Not Found` error instead of the expected `200 OK`.
 *   **Likely Cause**: Similar to the previous test, the `cardId` being used in the test is incorrect.
 *   **Proposed Fix**: I will update the test to correctly use the `cardId` from the `beforeAll` block. This will ensure that the test is updating a valid card.
 *   **Impact on Other Tests**: This change will only affect this specific test and will not have any impact on other tests.
 
-#### 3. Failing Test: `cards.test.ts > PUT /api/cards/:id/move > should move a card to a new list and position`
+#### 3. [✅] Failing Test: `cards.test.ts > PUT /api/cards/:id/move > should move a card to a new list and position`
 
 *   **Symptom**: The test is failing because the `listId` is not being updated as expected.
 *   **Likely Cause**: The test is not correctly asserting that the `listId` has been updated to the new list's ID.
 *   **Proposed Fix**: I will update the test to correctly assert that the `listId` of the moved card is the same as the `listId` of the new list.
 *   **Impact on Other Tests**: This change will only affect this specific test and will not have any impact on other tests.
 
-#### 4. Failing Test: `lists.test.ts > GET /api/lists/:id > should not allow access to a list in a board the user does not own`
+#### 4. [✅] Failing Test: `lists.test.ts > GET /api/lists/:id > should not allow access to a list in a board the user does not own`
 
 *   **Symptom**: The test receives a `200 OK` instead of the expected `404 Not Found`.
 *   **Likely Cause**: The test is not correctly asserting that the user does not have access to the list. The test should be checking that the response status is `404`, but it's currently checking for `200`.
